<resources>
    <string name="app_name">Planifind</string>
    <string name="photo_button_text">Tomar foto de avión</string>
    <string name="specifications">Especificaciones</string>
    <string name="max_speed">Velocidad máxima</string>
    <string name="spectrum">Distancia máxima</string>
    <string name="first_flight">Primer vuelo</string>
    <string name="length">Longitud</string>
    <string name="wingspan">Envergadura</string>
    <string name="cruising_speed">Velocidad de crucero</string>
    <string name="absolute_ceiling">Techo absoluto</string>
    <string name="automatic">Autonomía</string>
    <string name="try_again">Intentar de nuevo</string>
    <string name="no_connection">Sin conexión</string>
    <string name="no_exists_airplane">La foto no contiene un avión</string>
    <string name="no_specification">No se pudo encontrar la especificación de este avión</string>
    <string name="restrictions">Usted ha utilizado el máximo de 10 solicitudes por mes. Espera el próximo mes para continuar utilizando la aplicación.</string>

</resources>
